# tinyrenderer

./: !build.cmd  !open.cmd  !open_project_dev.cmd  !open_project_prod.cmd  !prod_build.cmd  !test.cmd  !test_build.cmd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  open_project.cmd  open_project.sh
cmake/: CMakeLists.txt
commands/: build.cmd  generate.cmd  get_cmake_flags.cmd  open.cmd
lesson_1/: CMakeLists.txt
lesson_1/src/: main.cpp
lesson_2/src/: main.cpp
lesson_3/src/: main.cpp
lesson_4/src/: main.cpp
lib/: CMakeLists.txt
lib/geometry/: CMakeLists.txt
lib/geometry/include/: geometry.h  geometry.inl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/model/: CMakeLists.txt
lib/model/include/: model.h
lib/model/src/: model.cpp
lib/painter/: CMakeLists.txt
lib/painter/include/: painter.inl
lib/painter/src/: painter.cpp
lib/renderer/: CMakeLists.txt
lib/tga/: CMakeLists.txt
lib/tga/include/: tgaimage.h
lib/tga/src/: tgaimage.cpp
sources/: CMakeLists.txt  basicdefs.h  geometry.h  tgaimage.cpp  tgaimage.h
sources/lessons/: CMakeLists.txt
sources/lessons/lesson_2/: CMakeLists.txt
sources/lessons/lesson_3/: CMakeLists.txt
sources/lessons/lesson_4/: CMakeLists.txt
sources/lessons/lesson_4/src/: main.cpp
sources/lessons/lesson_5/: CMakeLists.txt
sources/lessons/lesson_5/src/: main.cpp
sources/lib/: CMakeLists.txt
sources/lib/geometry/: CMakeLists.txt
sources/lib/geometry/include/: geometry.h  geometry.inl
sources/lib/geometry/src/: geometry.cpp
sources/lib/glad/: CMakeLists.txt
sources/lib/glad/include/glad/: gl.h
sources/lib/model/: CMakeLists.txt
sources/lib/model/include/: model.h
sources/lib/model/src/: model.cpp
sources/lib/painter/: CMakeLists.txt
sources/lib/painter/include/: painter.h  painter.inl
sources/lib/painter/src/: painter.cpp
sources/lib/tga/: CMakeLists.txt
sources/lib/tga/include/: tgaimage.h
sources/lib/tga/src/: tgaimage.cpp
sources/precompiled_headers/: basic_defs.h
src/: CMakeLists.txt  basicdefs.h  main.cpp  model.cpp  model.h
src/libraries/: CMakeLists.txt
src/libraries/basiclib/: CMakeLists.txt  basicdefs.cpp  basicdefs.h  stdheaders.h
src/libraries/graphics/: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.h  Model.cpp  Model.h  PixelsRow.cpp  PixelsRow.h  Texture.cpp  Texture.h  TextureView.cpp  TextureView.h
src/libraries/math/: BoundingBox.h  CMakeLists.txt  MathLib.h  Vec2.h  Vec3.h
src/libraries/mymath/: BoundingBox.h  CMakeLists.txt  MyMath.h  Vec2.h  Vec3.h  Vector.h  geometry.h
src/libraries/render/: BoundingBox.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Model.cpp  Model.h  PixelsRow.cpp  Texture.cpp  Texture.h  Utils.h  geometry.cpp
src/libraries/tgaimage/: CMakeLists.txt  tgaimage.cpp  tgaimage.h
src/libraries/tinyrenderer/: CMakeLists.txt
src/libraries/utils/: CMakeLists.txt  Utils.cpp  Utils.h
tests/: BoundingBox.cpp  CMakeLists.txt  Vector.cpp
tests/cmake_helpers/: my_add_test.cmake
