cmake_minimum_required(VERSION 3.16)

project("Tiny Renderer" LANGUAGES CXX)

if (NOT WIN32)
message(FATAL_ERROR "Unsupported platform")
endif()

set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")

set(PROJECT_OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin" CACHE STRING "Project directory")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_OUTPUT_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_OUTPUT_DIR}")

add_subdirectory(sources)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT TinyRenderer)